--- a/src/tellobot_interfaces/CMakeLists.txt
+++ b/src/tellobot_interfaces/CMakeLists.txt
@@ -37,6 +37,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(tellobot_interfaces
   "srv/TakePicture.srv"
+  "msg/StringArray.msg"
  )
 
 ament_package()
